--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,103 @@
-# dependencies
+# Dependencies
 /node_modules
+node_modules/
 /.pnp
 .pnp.js
 .yarn/install-state.gz
+package-lock.json
+yarn.lock
 
-# testing
+# Testing
 /coverage
+.nyc_output
+junit.xml
 
-# next.js
+# Build outputs
+/build
+/dist
 /.next/
 /out/
 
-# production
-/build
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env*.local
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# local env files
-.env*.local
-.env
+# IDEs and editors
+.idea/
+.vscode/
+*.swp
+*.swo
+*.sublime-workspace
+*.sublime-project
+.project
+.classpath
+*.launch
+.settings/
 
-# vercel
-.vercel
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# typescript
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+.venv/
+venv/
+ENV/
+
+# Temporary files
+*.tmp
+*.temp
+.cache
+.temp
+
+# Version control
+.git
+.gitattributes
+
+# Backend specific
+*.sqlite
+*.sqlite3
+*.db
+migrations/
+
+# Frontend specific
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
+.angular/
+.next/
+storybook-static/
+
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
 
-# IDE specific files
-.idea
-.vscode
-*.swp
-*.swo
+# Misc
+.vercel
+*.pem
+.dockerignore
+docker-compose.override.yml
 
-.venv/
-
-nfs\*
+# Project specific
+nfs*
